# data-analysis

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  Taskfile.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  bootstrap.sh  devcontainer.json  docker-bake.hcl  environment.yml  setup
backend/: .gitignore  Gemfile  LICENSE.txt  README.md  pyproject.toml
backend/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
backend/src/academia/: __about__.py  __init__.py  __main__.py
backend/test/fixtures/: universities.yml
data/: us-ipeds.jsonl
frontend/: astro.config.mjs  package.json  tailwind.config.cjs  tsconfig.json
frontend/src/components/core/: Header.astro
frontend/src/components/support/: BaseHead.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
src/academiafyi/: __main__.py
src/academiafyi/commands/: __init__.py
src/academiafyi/sources/us_ipeds/: __init__.py  download.py
src/academiafyi/tools/: misc.py
